# CrowdWisdomTrading-AI-Agent-

./: .env.example  Approch.md  Documentation.md  README.md  financial_creators_20250917_071356.json  financial_creators_20250917_071405.json  financial_creators_20250917_071415(1).json  pyproject.toml  requirements.txt  run_agent.py  store.json
